# back_in_the_game

./: .gitignore  README.md
Analyses/: README.md  environment.yml  pyproject.toml
Analyses/back_in_the_game_analyses/: __init__.py  data.py  data_extraction.py  maths.py
Analyses/runner/: main.py
Assets/: example_experiment.json
Assets/Materials/: Y-mark_material.mat
Assets/Prefabs/: XR Player Prefab.prefab
Assets/Prefabs/ExperimentLoaderPrefab/: ExperimentLoader.cs  ExperimentLoader.prefab  example.json
Assets/RealtimeNetworking/: RealtimeNetworkingClient.cs  RealtimeNetworkingClinician.cs  RealtimeNetworkingPatient.cs  RealtimeNetworkingServer.cs
Assets/RealtimeNetworking/Client/: Client.cs  RealtimeNetworking.cs  Receiver.cs  Sender.cs
Assets/RealtimeNetworking/Common/: CsvWriter.cs  PacketType.cs  Tools.cs
Assets/RealtimeNetworking/Server/: Client.cs  Packet.cs  Receiver.cs  (+2 more)
Assets/Resources/: PXR_ProjectSetting.asset  PicoSdkPCConfig.json
Assets/Scenes/: MainScene.unity  SoccerField.unity
Assets/Scripts/: ActivateSeeThrough.cs  ControllersActions.cs  ExperimentLoader.cs  HudManager.cs  KeyBoard.cs  SceneManager.cs
Assets/Settings/: High_PipelineAsset.asset  Low_PipelineAsset.asset  Medium_PipelineAsset.asset  Ultra_PipelineAsset.asset  Very High_PipelineAsset.asset  Very Low_PipelineAsset.asset
Assets/SketchStadium/: StadiumBorder.mat  StadiumGrass.mat  StadiumLines.mat
Assets/XR/: XRGeneralSettings.asset
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
SDKs/: README.md
(+9 files in other folders)
