[build-system]
requires = [
    "setuptools", 
    "pandas",
    "matplotlib",
]
build-backend = "setuptools.build_meta"

[project]
name =  "back_in_the_game_analyses"
description = "A generic interface to generate a virtual buddy"
dynamic = ["version"]
authors = [
    {name = "Pariterre", email = "pariterre@hotmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["back_in_the_game_analyses"]

[tool.setuptools.dynamic]
version = {attr = "back_in_the_game_analyses.__version__"}

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"